--- a/css/css.css
+++ b/css/css.css
@@ -1,8 +1,7 @@
 
 @font-face {
     font-family: 'Aktiv.Grotesk';
-    src: url('/font/Aktiv.Grotesk/Aktiv Grotesk/OTF/AktivGrotesk-BlackItalic.otf') format('otf');
+    src: url('/font/Aktiv.Grotesk/Aktiv Grotesk/OTF/AktivGrotesk-BlackItalic.otf') format('off');
     /* 他のフォーマットがあればここに追加します */
-    font-weight: 400;
-    font-style: normal;
+   
 }
